--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,9 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "jwt-simple": "^0.5.1",
-    "mongoose": "^4.11.1"
+    "mongoose": "^4.11.1",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
